Add event listener for 'showFavorites' button in app.js

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Films Populaires</h1>
+    <button id="showFavorites">Voir les favoris</button>
     <input type="text" id="searchBox" placeholder="Rechercher un film..." oninput="searchMovies(event)">
     <div id="movie-container"></div>
+    <div id="favorites-container" style="display:none;"></div>
     <script src="app.js"></script>
 </body>
 </html>
