--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Films Populaires</h1>
     <button id="showFavorites">Voir les favoris</button>
+    <button id="showAllMovies" style="display:none;">Voir tous les films</button>
     <input type="text" id="searchBox" placeholder="Rechercher un film..." oninput="searchMovies(event)">
     <div id="movie-container"></div>
     <div id="favorites-container" style="display:none;"></div>
