--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <h1>Films Populaires</h1>
-    <button id="showFavorites">Voir les favoris</button>
+    <button id="showFavorites">Voir vos favoris</button>
     <button id="showAllMovies" style="display:none;">Voir tous les films</button>
     <input type="text" id="searchBox" placeholder="Rechercher un film..." oninput="searchMovies(event)">
     <div id="movie-container"></div>
     <div id="favorites-container" style="display:none;"></div>
+    <div id="details-container" style="display:none;"></div>
+
     <script src="app.js"></script>
 </body>
 </html>
