--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="showFavorites">Voir vos favoris</button>
     <button id="showAllMovies" style="display:none;">Voir tous les films</button>
     <input type="text" id="searchBox" placeholder="Rechercher un film..." oninput="searchMovies(event)">
-    <div id="movie-container"></div>
+    <div id="movie-container" class="movie-grid"></div>
     <div id="favorites-container" style="display:none;"></div>
     <div id="details-container" style="display:none;"></div>
 
